<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/temperaturetextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="13dp"
        android:text="+20c"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/weathertextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/speedtextView"
        app:layout_constraintTop_toBottomOf="@+id/citytextView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="71dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/weatherimage"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/SECONDACTIVITY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weathertextView" />

    <Button
        android:id="@+id/REFRESH"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#B3F3F3"
        android:onClick="fetchWeatherData"
        android:text="@string/Refresh"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FORECAST_WEBSITE" />

    <TextView
        android:id="@+id/speedtextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="33dp"
        android:text="3m/s"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/temperaturetextView"
        app:layout_constraintEnd_toStartOf="@+id/temperaturetextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/temperaturetextView" />

    <TextView
        android:id="@+id/weathertextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="13dp"
        android:text="@string/Sunny"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperaturetextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-19dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <TextView
        android:id="@+id/citytextView"
        android:layout_width="167dp"
        android:layout_height="0dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Finland"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/temperaturetextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/FORECAST_WEBSITE"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:backgroundTint="#B3F3F3"
        android:onClick="morePredict"
        android:text="@string/forecast"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/REFRESH"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SECONDACTIVITY" />

    <Button
        android:id="@+id/SECONDACTIVITY"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:backgroundTint="#B3F3F3"
        android:onClick="secondActivity"
        android:text="@string/secondActivity"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/FORECAST_WEBSITE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>